inclusão do desafio 'Criando um Banco Digital com Java e Orientação a Objetos'

--- a/.gitignore
+++ b/.gitignore
@@ -20,5 +20,12 @@
 /desafio-poo/.settings
 /desafio-poo/target
 
+# desafio-poo-banco
+/desafio-poo-banco/bin
+/desafio-poo-banco/.classpath
+/desafio-poo-banco/.project
+/desafio-poo-banco/.settings
+
+
 # desafio-sintaxe
 /desafio-sintaxe/ContaBanco/bin
